@@ -4,6 +4,7 @@
     * spring cleaning, remove/clean BUGBUGs and some dead code and
       polish the documentation a bit
     * revert changes in mkpath.c to make FreeBSD happy
+    * fix hardlinks in tar/pax output (they must come last)
 
 
 22 Mar 2010: 1.1.3 Miek Gieben <rdup@miek.nl>
